--- a/ejercicio.html
+++ b/ejercicio.html
@@ -15,5 +15,25 @@
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum quaerat tempore autem quia, cumque libero vel sequi iusto qui quibusdam dolorem laudantium nisi perspiciatis est, ratione ab! Totam, deleniti ratione.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. In architecto hic accusamus esse illum amet quia quam suscipit pariatur itaque iusto, inventore, quos facilis aperiam, vero saepe est! Atque, ea.</li>
         </ul>
+        <a href="https://127.0.0.1/ejemplo.html">volver</a>
+        <li><a href="pagina.html">s02108001</a>
+            <a href="pagina.html">s02108002</a>
+            <a href="pagina.html">s02108003</a>
+            <a href="pagina.html">s02108004</a>
+            <a href="pagina.html">s02108005</a>
+            <a href="pagina.html">s02108006</a></li>
+    
+            <ul>
+                <li>
+                    s021080009
+                    s021080010
+                    s021080011
+                    s021080012
+                </li>
+            </ul>
+            boostrap 
+            layout 
+            containers 
+
     </body>
 </html>
