--- a/javascript.html
+++ b/javascript.html
@@ -10,7 +10,76 @@
 <body>
 <script>
     document.write("ejercicio");
-</script>
-</body>
+    console.log("nombre: "+ parametros.get('nom'));
+    console.log("apellido: "+ parametros.get('ape'));
+    console.log("direccion: "+ parametros.get('dir'));
+    console.log("telefono: "+ parametros.get('tel'));
+</script> 
+
+<div class="card" style="width: 10rem;">
+<div class="card-header">
+    Cliente
+</div>
+<ul class="list-group list-group-flush">
+    <li class="list-group-item">Nombre:
+        <script> document.write(parametros.get('nom'));</script>
+    </li>
+    <li class="list-group-item">Apellido:
+        <script> document.write(parametros.get('ape'))</script>
+    </li>
+    <li class="list-group-item">Direccion:</li>
+    <li class="list-group-item">Telefono:</li>
+</ul>
+</div>
+
+<div class="card" style="width: 10rem">
+ <div class="card-header">
+    Cliente
+ </div>
+  <div class="row">
+      <div class="col">
+          <ul class="list-group list-group-flush">
+             <li class="list-group-item">Nombre:</li>
+             <li class="list-group-item">Apellido:</li>
+             <li class="list-group-item">Direccion:</li>
+             <li class="list-group-item">Telefono:</li>
+
+            </ul>
+        </div>
+
+          <div class="col">
+             <ul class="list-group list-group-flush">
+             <li class="list-group-item"><span id="nom"></span></li>
+             <li class="list-group-item"><span id="ape"></span></li>
+             <li class="list-group-item"><span id="dir"></span></li>
+             <li class="list-group-item"><span id="tel"></span></li>
+             </ul>
+        </div>
+    </div>
+</div>
+
+<br>
+ <table>
+     <tr>
+         <td>Nombre:</td>
+         <td>Apellido:</td>
+         <td>Direccion:</td>
+         <td>Telefono</td>
+     </tr>
+     <tr>
+         <td>Andy</td>
+         <td>Hernan</td>
+         <td>Xalapa</td>
+         <td>45354535</td>
+     </tr>
+     <tr>
+         <td>Alma</td>
+         <td>Hernandez</td>
+         <td>Colombia</td>
+         <td>54353543</td>
+     </tr>
+ </table>
+
+ </body>
 
 </html>
