--- a/calculadora.html
+++ b/calculadora.html
@@ -22,7 +22,7 @@
         height: 250px;
         text-align: center;">
         <form action="#" name="calculadora" id="calculadora"></form>
-            <input type="text" name="txt" value="0" disabled>
+            <input type="text" name="txt" value="0">
             <p>
                 <input type="button" value="1" onclick="ingresarnum(this.value)" />
                 <input type="button" value="2" onclick="ingresarnum(this.value)" />
