--- a/ProyectoLogeo/inicio.html
+++ b/ProyectoLogeo/inicio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form action="" method="get">
-        <h1>Registro</h1>
+        <h1>Iniciar Sesion</h1>
         <input type="text" name="nombre" id="" placeholder="Ingresa usuario">
         <input type="password" name="password" id="" placeholder="Ingresa tu password">
         <input type="submit" value="llamar"> 
