--- a/ProyectoLogeo/inicio.html
+++ b/ProyectoLogeo/inicio.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyect</title>
+    <script src="https://kit.fontawesome.com/e887deff17.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./stilos.css">
+    
 </head>
 <body>
     <form action="" method="get">
         <h1>Iniciar Sesion</h1>
+        <i class="fas fa-user"></i>
         <input type="text" name="nombre" id="" placeholder="Ingresa usuario">
+        <i class="fas fa-key"></i>
         <input type="password" name="password" id="" placeholder="Ingresa tu password">
-        <input type="submit" value="llamar"> 
+        <input type="submit" value="aceptar"> 
        
     </form>
 
